@@ -20,7 +20,8 @@ Require-Bundle: org.eclipse.ui,
  org.eclipse.elk.alg.layered;bundle-version="0.9.0",
  org.eclipse.sirius.ext.base;bundle-version="7.4.3",
  org.eclipse.elk.alg.rectpacking;bundle-version="0.9.0",
- org.eclipse.sirius.ecore.extender;bundle-version="7.4.3"
+ org.eclipse.sirius.ecore.extender;bundle-version="7.4.3",
+ org.eclipse.core.variables
 Bundle-RequiredExecutionEnvironment: JavaSE-17
 Bundle-ActivationPolicy: lazy
 Import-Package: com.google.common.collect;version="27.0.0",
